# blok

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  todo.txt
assets/models/: Truck 01.vox
assets/pipelines/: default.yaml  hello_triangle.yaml  mesh_flat.yaml  rainbow.yaml
assets/shaders/: atrous.comp  common.glsl  default.frag.glsl  default.vert.glsl  fullscreen.frag.glsl  fullscreen.vert.glsl  hit.rchit  intersect.rint  mesh_flat.frag.glsl  mesh_flat.vert.glsl  miss.rmiss  rainbow.comp.glsl  raygen.rgen  raytrace.comp.glsl  rotate.comp.wgsl  shadow.rmiss  sharpen.comp  taa.comp  temporal_reproject.comp  tonemap.comp  tri.frag.glsl  tri.vert.glsl  tri.wgsl  variance.comp
blok/: CMakeLists.txt
blok/include/: Cuda_Tracer.hpp  Renderer.hpp  Renderer_BASE_2313.hpp  Renderer_GL.hpp  Renderer_WGPU.hpp  UI.hpp  app.hpp  backend.hpp  brush.hpp  camera.hpp  chunk.hpp  chunk_manager.hpp  cuda_tracer.hpp  descriptor_system.hpp  descriptors.hpp  gpu_device.hpp  gpu_flags.hpp  gpu_handles.hpp  gpu_types.hpp  image_states.hpp  light.hpp  material.hpp  math.hpp  morton.hpp  object.hpp  pipeline_system.hpp  renderer.hpp  renderer_denoising.hpp  renderer_gl.hpp  renderer_postprocess.hpp  renderer_raytracing.hpp  renderer_temporal_reprojection.hpp  resources.hpp  scene.hpp  shader_manager.hpp  shader_system.hpp  svo.hpp  ui.hpp  vox_loader.hpp  vulkan_acceleration.hpp  (+5 more)
blok/src/: Cuda_Tracer.cu  Renderer_GL.cpp  Renderer_WGPU.cpp  UI.cpp  app.cpp  brush.cpp  camera.cpp  chunk_manager.cpp  cuda_tracer.cu  descriptor_system.cpp  descriptors.cpp  main.cpp  material.cpp  pipeline_system.cpp  renderer_denoising.cpp  renderer_draw.cpp  renderer_gl.cpp  renderer_gui.cpp  renderer_init.cpp  renderer_postprocess.cpp  renderer_raytracing.cpp  renderer_temporal_reprojection.cpp  renderer_upload.cpp  shader_manager.cpp  shader_system.cpp  svo.cpp  ui.cpp  vma_impl.cpp  vox_loader.cpp  vulkan_acceleration.cpp  vulkan_context.cpp  vulkan_raytracing.cpp  vulkan_renderer.cpp  webgpu_renderer.cpp  window.cpp
